# climafacts-kg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: gh-pages-publish.yml  semantic-release.yml
climafactskg/: __init__.py  cli.py  endpoints.py  stats.py  utils.py
climafactskg/builders/: cimplekg.py  climafactskg.py
climafactskg/classifiers/: cards.py
climafactskg/collectors/: cimplekg.py  skepticalscience.py
climafactskg/parsers/: skepticalscience.py
data/: cards.ttl
